--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -6,15 +6,39 @@
     android:layout_height="match_parent"
     tools:context=".GuideActivity">
 
-    <Button
-        android:layout_width="60dp"
+
+
+    <LinearLayout
+        android:layout_width="80dp"
         android:layout_height="40dp"
-        android:id="@+id/skip"
-        android:text="跳过"
-        android:layout_alignParentEnd="true"
-        android:padding="0dp"
+        android:orientation="horizontal"
         android:layout_margin="10dp"
-        android:background="#F5F5F5"/>
+        android:background="@drawable/skip_button"
+        android:layout_alignParentEnd="true"
+        android:gravity="center">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:text="跳过"
+            android:id="@+id/skip"
+            android:gravity="center"/>
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="#696969"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="5"
+            android:id="@+id/count"
+            android:gravity="center"/>
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
