--- a/app/src/main/res/layout/log_item.xml
+++ b/app/src/main/res/layout/log_item.xml
@@ -1,20 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="50dp"
     android:layout_margin="5dp"
     >
 
-
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:id="@+id/log_content"
-        android:textSize="40sp"
-        android:layout_gravity="center"
-        />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:id="@+id/log_content"
+            android:textSize="40sp"
+            android:layout_gravity="center"
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:gravity="center"
+            android:layout_gravity="bottom"
+            >
+
+            <Button
+                android:layout_width="30dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/delete"
+                android:visibility="gone"
+                android:id="@+id/delete"
+                />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
